# movieplexx-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spec.md
.github/workflows/: docker-publish.yml
src/movieplexx/: __init__.py  cli.py  http.py  metrics.py  proxy.py  scrape.py  server.py  store.py
tests/: test_contract.py  test_http.py
tests/fixtures/: filtered-films.golden.json
