[project]
name = "movieplexx-mcp"
version = "0.1.0"
description = "MCP server mirroring and archiving the Movieplexx Buchholz cinema program"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "mcp>=1.2",
    "prometheus-client>=0.20",
]

[project.scripts]
movieplexx = "movieplexx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/movieplexx"]

[dependency-groups]
dev = [
    "pytest>=8",
]
